# witness

./: .gitignore  Cargo.toml  PROJECT.md  README.md
docs/: SPEC.md
src/: capture.rs  cli.rs  main.rs  report.rs  store.rs
tests/: cli_evidence.rs  cli_witness.rs
