[package]
name = "witness"
version = "0.1.0"
edition = "2021"
description = "Reproducible command evidence recorder — proves work with auditable bundles"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
